--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 #MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/distance-calculator
+spring.datasource.url=jdbc:mysql://localhost:3306/distance-calculator?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Hibbernate
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=none
+
 
 #Liquibase
 spring.liquibase.enabled=true
